--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,3 @@
 language: java
 sudo: false
-script: mvn clean jacoco:prepare-agent install jacoco:report site
+script: mvn clean jacoco:prepare-agent install jacoco:report site -X
