--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.irurueta</groupId>
-    <artifactId>server-commons</artifactId>
+    <artifactId>irurueta-server-commons</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <url>https://github.com/albertoirurueta/server-commons</url>
+    <inceptionYear>2016</inceptionYear>
     <dependencies>
         <!-- dependencies for unit tests -->
         <dependency>
@@ -29,7 +30,42 @@
         <github.global.server>github</github.global.server>
         <github.global.oauth2Token>${env.GITHUB_OAUTH_TOKEN}</github.global.oauth2Token>
     </properties>
+    <profiles>
+        <profile>
+            <!-- profile to be run on CI server -->
+            <id>continuousIntegration</id>
+            <activation>
+                <property>
+                    <name>environment</name>
+                    <value>test</value>
+                </property>
+            </activation>
+            <build>
+                <plugins>
+                    <!-- publishes site report to github gh-pages branch -->
+                    <plugin>
+                        <groupId>com.github.github</groupId>
+                        <artifactId>site-maven-plugin</artifactId>
+                        <version>0.12</version>
+                        <configuration>
+                            <message>Creating site for ${project.version}</message>
+                            <noJekyll>true</noJekyll>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <goals>
+                                    <goal>site</goal>
+                                </goals>
+                                <phase>site</phase>
+                            </execution>
+                        </executions>
+                    </plugin>                    
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
     
+    <!-- default profile -->
     <build>
         <!-- 
         include al non java files in source and test folders, this can
@@ -162,22 +198,33 @@
                     </execution>
                 </executions>
             </plugin>
+            <!-- ensures that license is added to all files -->
             <plugin>
-                <groupId>com.github.github</groupId>
-                <artifactId>site-maven-plugin</artifactId>
-                <version>0.12</version>
+                <groupId>com.mycila</groupId>
+                <artifactId>license-maven-plugin</artifactId>
+                <version>2.11</version>
                 <configuration>
-                    <message>Creating site for ${project.version}</message>
+                    <header>com/mycila/maven/plugin/license/templates/APACHE-2.txt</header>
+                    <properties>
+                        <owner>Alberto Irurueta Carro</owner>
+                        <email>alberto@irurueta.com</email>
+                    </properties>
+                    <excludes>
+                        <exclude>**/README</exclude>
+                        <exclude>**/*.xml</exclude>
+                        <exclude>**/*.properties</exclude>
+                        <exclude>src/test/resources/**</exclude>
+                        <exclude>src/main/resources/**</exclude>
+                    </excludes>
                 </configuration>
                 <executions>
                     <execution>
                         <goals>
-                            <goal>site</goal>
+                            <goal>check</goal>
                         </goals>
-                        <phase>site</phase>
                     </execution>
                 </executions>
-            </plugin>
+            </plugin>            
         </plugins>
     </build>
     
