--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,4 @@ env:
 #script: travis_wait mvn clean jacoco:prepare-agent install jacoco:report site
 
 #add: -Denvironment=test to activate CI profile to publish into gh-pages
-script: mvn clean jacoco:prepare-agent install jacoco:report site -Denvironment=test
+script: mvn clean jacoco:prepare-agent install jacoco:report coveralls:report site -Denvironment=test
