--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,14 @@
                                 <phase>site</phase>
                             </execution>
                         </executions>
-                    </plugin>                    
+                    </plugin>    
+                    
+                    <!-- publishes coverage info to coveralls -->
+                    <plugin>
+                        <groupId>org.eluder.coveralls</groupId>
+                        <artifactId>coveralls-maven-plugin</artifactId>
+                        <version>4.1.0</version>
+                    </plugin>                
                 </plugins>
             </build>
         </profile>
