--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,15 @@
         <developerConnection>scm:git@github.com:albertoirurueta/irurueta-server-commons.git</developerConnection>
         <url>git@github.com:albertoirurueta/irurueta-server-commons.git</url>
     </scm>
+    
+    <distributionManagement>
+        <!-- maven central snapshot repository -->
+        <snapshotRepository>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+    </distributionManagement>
+    
     <dependencies>
         <!-- dependencies for unit tests -->
         <dependency>
@@ -57,6 +66,7 @@
         <github.global.server>github</github.global.server>
         <github.global.oauth2Token>${env.GITHUB_OAUTH_TOKEN}</github.global.oauth2Token>
     </properties>
+    
     <profiles>
         <profile>
             <!-- profile to be run on CI server -->
@@ -97,7 +107,64 @@
                 </plugins>
             </build>
         </profile>
-    </profiles>
+        <profile>
+            <id>sign</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-gpg-plugin</artifactId>
+                        <version>1.6</version>
+                        <executions>
+                            <execution>
+                                <id>sign-artifacts</id>
+                                <phase>verify</phase>
+                                <goals>
+                                    <goal>sign</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>build-extras</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-source-plugin</artifactId>
+                        <version>3.0.0</version>
+                        <executions>
+                            <execution>
+                                <id>attach-sources</id>
+                                <goals>
+                                    <goal>jar-no-fork</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-javadoc-plugin</artifactId>
+                        <version>2.10.3</version>
+                        <executions>
+                            <execution>
+                                <id>attach-javadocs</id>
+                                <goals>
+                                    <goal>jar</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>        
     
     <!-- default profile -->
     <build>
@@ -120,7 +187,8 @@
                     <exclude>**/*.java</exclude>
                 </excludes>
             </testResource>
-        </testResources>        
+        </testResources>   
+             
         <plugins>
             <!-- unit tests plugins -->
             <plugin>
@@ -259,7 +327,20 @@
                         </goals>
                     </execution>
                 </executions>
-            </plugin>            
+            </plugin>   
+            
+            <!-- deploys artifact to snapshots repository -->
+            <plugin>
+                <groupId>org.sonatype.plugins</groupId>
+                <artifactId>nexus-staging-maven-plugin</artifactId>
+                <version>1.6.7</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <serverId>ossrh</serverId>
+                    <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
+                </configuration>
+            </plugin>         
         </plugins>
     </build>
     
